dotNetRDF Toolkit for Windows/Mono
==================================

A Toolkit of command line utilities and GUI tools for working with RDF data

Version 0.6.0 Beta

Robert Vesse 2009-12
rvesse@vdesign-studios.com

Change Log
----------

This represents a summary of additions, changes and removals for the 0.6.0 release of the dotNetRDF Toolkit
for Windows/Mono detailed by Tool.

Note: While some tools may have no changes all tools benefit from being upgraded to the latest release of the
dotNetRDF core library which typically incorporates bug fixes and performance improvements so you should still
upgrade to these latest versions.

rdfConvert


rdfEditor (Not available under Mono)
 
rdfOptStats
   
rdfQuery
- Pick up some bug fixes to SPARQL support

rdfServer

rdfServerGUI

rdfSqlStorage
 
rdfWebDeploy

soh 

SparqlGUI
- Pick up some bug fixes to SPARQL support
- Additional config option to allow unsafe optimization

StoreManager
- Pick up some bug fixes to Virtuoso support
- Pick up a bug fix to Sesame support
- Pick up some bug fixes to Stardog support
- New Connection Form will now remember previously entered connection details during a session