@@ -3,7 +3,7 @@ dotNetRDF Toolkit for Windows
 
 A Toolkit of command line utilities and GUI tools for working with RDF data
 
-Version 0.5.2 Beta
+Version 0.6.0 Beta
 
 Robert Vesse 2009-12
 rvesse@vdesign-studios.com
@@ -14,19 +14,19 @@ Usage
 Unzip this zip package to a folder of your choice.  We recommend adding this folder to your PATH variable so you can access the command line tools from a command prompt regardless of the working directory.
 
 This Toolkit provides the following command line utilities:
-- rdfConvert - A tool for converting RDF Graphs and Datasets between different serializations (Version 0.5.2)
-- rdfOptStats - A tool for generating statistics on RDF for use with the new optional Weighted Optimiser (Version 0.4.2)
-- rdfQuery - A tool for querying RDF data using SPARQL (Version 0.5.2)
-- rdfServer - A tool for running a lightweight HTTP server to experimental with SPARQL (Version 0.1.2)
-- rdfSqlStorage - A tool for managing ADO Stores (our new SQL based backend) on the command line (Version 0.3.2)
-- rdfWebDeploy - A tool for testing and deploying configuration for ASP.Net applications (Version 0.5.2)
-- soh - A tool for communicating with servers supporting the SPARQL Protocols over HTTP (Version 0.5.2)
+- rdfConvert - A tool for converting RDF Graphs and Datasets between different serializations (Version 0.6.0)
+- rdfOptStats - A tool for generating statistics on RDF for use with the new optional Weighted Optimiser (Version 0.5.0)
+- rdfQuery - A tool for querying RDF data using SPARQL (Version 0.6.0)
+- rdfServer - A tool for running a lightweight HTTP server to experimental with SPARQL (Version 0.2.0)
+- rdfSqlStorage - A tool for managing ADO Stores (our new SQL based backend) on the command line (Version 0.4.0)
+- rdfWebDeploy - A tool for testing and deploying configuration for ASP.Net applications (Version 0.6.0)
+- soh - A tool for communicating with servers supporting the SPARQL Protocols over HTTP (Version 0.6.0)
 
 This Toolkit provides the following GUI tools:
-- rdfEditor - A Notepad replacement for editing RDF and SPARQL (Version 0.5.2)
-- rdfServerGUI - A GUI for managing rdfServer instances (Version 0.1.2)
-- SparqlGUI - A GUI for testing SPARQL queries using dotNetRDF's in-memory Leviathan engine (Version 0.5.2)
-- StoreManager - A GUI for performing basic management and query tasks on various Triple Stores (Version 0.5.2)
+- rdfEditor - A Notepad replacement for editing RDF and SPARQL (Version 0.6.0)
+- rdfServerGUI - A GUI for managing rdfServer instances (Version 0.2.0)
+- SparqlGUI - A GUI for testing SPARQL queries using dotNetRDF's in-memory Leviathan engine (Version 0.6.0)
+- StoreManager - A GUI for performing basic management and query tasks on various Triple Stores (Version 0.6.0)
 
 License
 -------
